# aiogram_sport_bot

./: README.md  app.py  pyproject.toml
alembic/: env.py
alembic/versions/: 5db040ff8e61_add_tutorial_model.py  6e03752722bf_add_tutorial_model.py  6f7acbdad54b_add_tutorial_model.py  872efcdc50f9_add_tutorial_model.py  ce14453f40f0_add_tutorial_model.py
bot/: bot.py
bot/handlers/: admin.py  register.py  user.py
bot/keyboards/: admin_keyboard.py  user_keyboard.py
bot/states/: states.py
bot/texts/: text.py
db/: database.py  service.py
db/models/: models.py  schemas.py
